Switch to simplified places api
