# cmd/server.go
@@ -4,11 +4,10 @@ import (
 	"net/http"
 
 	"github.com/ebrotz/krs-backend/api"
-	"github.com/ebrotz/krs-backend/internal/address"
+	"github.com/ebrotz/krs-backend/internal/places"
 )
 
 func main() {
-	// Use the address package to construct a ServerInterface-backed handler.
-	m := api.Handler(address.NewAddressHandler())
+	m := api.Handler(places.NewPlaceHandler())
 	_ = http.ListenAndServe(":8080", m)
 }
